# actix-permissions

./: CONTRIBUTING.md  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: main.rs
examples/role-based-authorization/: Cargo.toml  README.md
examples/role-based-authorization/src/: lib.rs  models.rs  permissions.rs  routes.rs
src/: builder.rs  lib.rs  permission.rs  service.rs
src/tests/: mod.rs  test_builder.rs  test_permission.rs  test_service.rs
tests/: test_permission.rs
