[package]
name = "hello-world-example"
publish = false
version = "0.1.0-SNAPSHOT"
edition = "2018"

[dependencies]
actix-web = { version = "4.0.1" }
thiserror = "1.0"
actix-permissions = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.136"
